Fix Maven build warnings and minor code cleanups (#2888)
* Fix Maven build warnings and refactor deprecated Integer usage

* Update src/test/java/org/codelibs/fess/it/admin/KeyMatchTests.java

Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>

---------

Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>